--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>CataGames Official Website</title>
+        <link rel="stylesheet" href="style.css">
+        <script src="index.js"></script>
     </head>
 
     <body>
-        <p>Bluuuuu</p>
-        <link rel="stylesheet" href="style.css">
-        <script src="index.js"></script>
+        <marquee behavior="sliding" direction="right" scrollamount="10">Indie Games Developed in a life</marquee>
+        <h1>Welcome to the CataGames Website!</h1>
+        <h2>Things to do here:</h2>
     </body>
 </html>
