--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </div>
 
     <footer>
-      <p>&copy; 2023 catamapp</p>
+      <p>&copy; 2023 catamapp | ver. 1</p>
     </footer>    
 </body>
 </html>
