--- a/subdirs/projects/projects.html
+++ b/subdirs/projects/projects.html
@@ -61,7 +61,7 @@
     <br />
 
     <footer>
-        <p>&copy; 2023 catamapp</p>
+        <p>&copy; 2023 catamapp | ver. 1</p>
     </footer>
 </body>
 </html>
