--- a/subdirs/about/about.html
+++ b/subdirs/about/about.html
@@ -8,6 +8,7 @@
     <script src="../../packages/TweenMax.min.js"></script>
     <script src="about.js"></script>
   </head>
+  
   <body>
     <header>
         <h1><center>About catamapp</center></h1>
@@ -30,6 +31,7 @@
         <ul>
           <li>Born in Indonesia 🇮🇩</li>
           <li>Motherless</li>
+          <li>14 Years old</li>
           <li>Had a great life so far..</li>
         </ul>
       </div>
@@ -39,14 +41,14 @@
         <ul>
           <li>This Website (catamapp.com)</li>
           <li>ProgressCMD (ProgressCLI Continued)</li>
-          <li>ATC Chaos (Roblox)</li>
+          <li>A Universal Timeline (Roblox)</li>
         </ul>
       </div>
     </div>
     <br />
     
     <footer>
-      <p>&copy; 2023 catamapp | ver. 1</p>
+      <p>&copy; 2023 catamapp | ver. 1.1 | compiled 1-5-2023</p>
     </footer>  
 </body>
 </html>
