--- a/subdirs/contact/contact.html
+++ b/subdirs/contact/contact.html
@@ -40,7 +40,7 @@
     <br />
 
     <footer>
-        <p>&copy; 2023 catamapp | ver. 1</p>
+        <p>&copy; 2023 catamapp | ver. 1.1 | compiled 1-5-2023</p>
     </footer> 
 </body>
 </html>
