--- a/subdirs/projects/projects.html
+++ b/subdirs/projects/projects.html
@@ -8,6 +8,7 @@
     <script src="packages/TweenMax.min.js"></script>
     <script src="projects.js"></script>
   </head>
+
   <body>
     <header>
         <h1><center>Projects catamapp is on</center></h1>
@@ -54,6 +55,17 @@
                     <p>Personal website you are on right now.</p>
                 </div>
             </li>
+
+            <li class="web-old">
+                <div class="web-old-detail">
+                    <h2>Catafrancia website (old)</h2>
+                    <p>Personal website that I made in <span class="sololearn" onclick="sololearn()">Sololearn</span></p>
+                    <button onclick="oldweb()">Visit</button>
+                </div>
+                <div class="web-old-img">
+                    <img src="../../pictures/sololearn.png" alt="sololearn">
+                </div>
+            </li>
         </ol>      
 
             
@@ -61,7 +73,7 @@
     <br />
 
     <footer>
-        <p>&copy; 2023 catamapp | ver. 1</p>
+        <p>&copy; 2023 catamapp | ver. 1.1 | compiled 1-5-2023</p>
     </footer>
-</body>
+  </body>
 </html>
