--- a/subdirs/about/about.html
+++ b/subdirs/about/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>catamapp's website</title>
+    <link rel="shortcut icon" href="../../pictures/pfp.jpg" type="image/x-icon">
     <link rel="stylesheet" href="about.css">
     <script src="../../packages/TweenMax.min.js"></script>
     <script src="about.js"></script>
@@ -21,6 +22,7 @@
             <li><a href="../projects/projects.html">Projects</a></li>
             <li><a href="../contact/contact.html">Contact</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="../settings/settings.html">Settings</a></li>
         </ul>
     </nav>
     <br />
@@ -48,7 +50,7 @@
     <br />
     
     <footer>
-      <p>&copy; 2023 catamapp | ver. 1.1 | compiled 1-5-2023</p>
+      <p>&copy; 2023 catamapp | ver. 1.1.1 | compiled 19-5-2023</p>
     </footer>  
 </body>
 </html>
