--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
             <li><a href="subdirs/projects/projects.html">Projects</a></li>
             <li><a href="subdirs/contact/contact.html">Contact</a></li>
             <li><a href="subdirs/about/about.html">About</a></li>
-            <li><a href="subdirs/settings/settings.html">Settings</a></li>
         </ul> 
     </nav>
     <br />
@@ -32,8 +31,8 @@
       <h1>Welcome!</h1>
       <h2>Top news:</h2>
       <div class="thumbnail" onclick="homeclickarticle()">
-        <img src="pictures/sad-ghost.png" alt="sad-ghost">
-        <h2>Catamapp is a sad ghost :(</h2>
+        <img src="pictures/dc-down.png" alt="dc-down">
+        <h2>Discord is down! Here is what you need to know.</h2>
         <span id="date"></span>
       </div>
       <br />
@@ -54,7 +53,7 @@
     </div>
 
     <footer>
-      <p>&copy; 2023 catamapp | ver. 1.1.1 | compiled 19-5-2023</p>
+      <p>&copy; 2023 catamapp | ver. 1.1.2 | compiled 29-9-2023</p>
     </footer>    
 </body>
 </html>
