--- a/subdirs/about/about.html
+++ b/subdirs/about/about.html
@@ -22,7 +22,6 @@
             <li><a href="../projects/projects.html">Projects</a></li>
             <li><a href="../contact/contact.html">Contact</a></li>
             <li><a href="about.html">About</a></li>
-            <li><a href="../settings/settings.html">Settings</a></li>
         </ul>
     </nav>
     <br />
@@ -41,16 +40,16 @@
       <h1>Projects</h1>
       <div class="projects">
         <ul>
-          <li>This Website (catamapp.com)</li>
-          <li>ProgressCMD (ProgressCLI Continued)</li>
-          <li>A Universal Timeline (Roblox)</li>
+          <li>This Website (catamapp website)</li>
+          <li><span class="orange" onclick="pbcmd()">ProgressCMD</span> (ProgressCLI Continued)</li>
+          <li>DONATE NOW! (Roblox)</li>
         </ul>
       </div>
     </div>
     <br />
     
     <footer>
-      <p>&copy; 2023 catamapp | ver. 1.1.1 | compiled 19-5-2023</p>
+      <p>&copy; 2023 catamapp | ver. 1.1.2 | compiled 29-9-2023</p>
     </footer>  
 </body>
 </html>
