--- a/subdirs/contact/contact.html
+++ b/subdirs/contact/contact.html
@@ -21,7 +21,6 @@
             <li><a href="../projects/projects.html">Projects</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="../about/about.html" onclick="about()">About</a></li>
-            <li><a href="../settings/settings.html">Settings</a></li>
         </ul>
     </nav>
     <br />
@@ -36,13 +35,13 @@
         </div>
         <br />
         <h1>Contact</h1>
-        <h4>Discord: catamapp#3620</h4>
+        <h4>Discord: catamapp</h4>
         <h4>Email: aragonisafferz@gmail.com</h4>
     </div>
     <br />
 
     <footer>
-        <p>&copy; 2023 catamapp | ver. 1.1.1 | compiled 19-5-2023</p>
+        <p>&copy; 2023 catamapp | ver. 1.1.2 | compiled 29-9-2023</p>
     </footer> 
 </body>
 </html>
