--- a/subdirs/links/links.html
+++ b/subdirs/links/links.html
@@ -23,11 +23,12 @@
       <ul class="links">
         <li><a href="https://progressbar95-community.itch.io/terminal95">Download ProgressCLI95 Now!</a></li>
         <li><a href="https://discord.gg/7S9buXeUMM">Discord Server</a></li>
+        <li><a href="https://catafrancia123.github.io/catamapp-website/">Personal Website</a></li>
       </ul>  
     </div>
 
     <footer>
-      <p>&copy; 2023 <span onclick="goweb()">catamapp</span> | ver. 1.1.1 | compiled 19-5-2023</p>
+      <p>&copy; 2023 catamapp | ver. 1.1.2 | compiled 29-9-2023</p>
     </footer>    
 </body>
 </html>
