--- a/subdirs/projects/projects.html
+++ b/subdirs/projects/projects.html
@@ -22,7 +22,6 @@
             <li><a href="projects.html">Projects</a></li>
             <li><a href="../contact/contact.html">Contact</a></li>
             <li><a href="../about/about.html" onclick="about()">About</a></li>
-            <li><a href="../settings/settings.html">Settings</a></li>
         </ul>
     </nav>
     <br />
@@ -42,8 +41,8 @@
             </li>
             <li class="under">
                 <div class="under-detail">
-                    <h2>A Universal Timeline</h2>
-                    <p>A Undertale type game based of of Undertale Monster Mania</p>
+                    <h2>Backrooms Unlimited</h2>
+                    <p>A Unlimited Backrooms Game took from the wiki.</p>
                 </div>
             </li>
         </ol>    
@@ -61,7 +60,7 @@
             <li class="web-old">
                 <div class="web-old-detail">
                     <h2>Catafrancia website (old)</h2>
-                    <p>Personal website that I made in <span class="sololearn" onclick="sololearn()">Sololearn</span></p>
+                    <p>Personal website that I made in <span class="sololearn" onclick="sololearn()">Sololearn</span> (cringe)</p>
                     <button onclick="oldweb()">Visit</button>
                 </div>
                 <div class="web-old-img">
