--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <p><i>hehe boi i spy on you (jk)</i></p>
       </div>  
       <div id="updlog">
-        <h2>Update Log: (1.1.1)</h2>
-        <p>Added icon at the title</p>
-        <p>Secret page...</p>
+        <h2>Update Log: (1.1.2)</h2>
+        <p>Discord is down...</p>
+        <p>No settings!</p>
       </div>
     </div>
 
