--- a/index.html
+++ b/index.html
@@ -39,21 +39,21 @@
       <div class="tips">
         <h2>Tips:</h2>
         <div id="orangetxt">
-          <p>The color <span class="orange" onclick="orange()">orange</span> means its a link.</p>
+          <p>The color <a class="orange" href="about:blank">orange</a> means its a link.</p>
         </div>
         <br />
         <p>You are now using a&nbsp;<span id="deviceHtml"></span>.</p>
         <p><i>hehe boi i spy on you (jk)</i></p>
       </div>  
       <div id="updlog">
-        <h2>Update Log: (1.1.2)</h2>
-        <p>Discord is down...</p>
-        <p>No settings!</p>
+        <h2>Update Log: (1.1.3)</h2>
+        <p>Optimization of the links (using a instead of span)</p>
+        <p>Discord is back!</p>
       </div>
     </div>
 
     <footer>
-      <p>&copy; 2023 catamapp | ver. 1.1.2 | compiled 29-9-2023</p>
+      <p>&copy; 2023 catamapp | ver. 1.1.3 | compiled 14-10-2023</p>
     </footer>    
 </body>
 </html>
