--- a/subdirs/about/about.html
+++ b/subdirs/about/about.html
@@ -41,15 +41,15 @@
       <div class="projects">
         <ul>
           <li>This Website (catamapp website)</li>
-          <li><span class="orange" onclick="pbcmd()">ProgressCMD</span> (ProgressCLI Continued)</li>
-          <li>DONATE NOW! (Roblox)</li>
+          <li><a class="orange" href="https://progressbar95-community.itch.io/terminal95">ProgressCMD</a> (ProgressCLI Continued)</li>
+          <li>Backrooms Unlimited (Roblox)</li>
         </ul>
       </div>
     </div>
     <br />
     
     <footer>
-      <p>&copy; 2023 catamapp | ver. 1.1.2 | compiled 29-9-2023</p>
+      <p>&copy; 2023 catamapp | ver. 1.1.3 | compiled 14-10-2023</p>
     </footer>  
 </body>
 </html>
