--- a/subdirs/projects/projects.html
+++ b/subdirs/projects/projects.html
@@ -43,6 +43,7 @@
                 <div class="under-detail">
                     <h2>Backrooms Unlimited</h2>
                     <p>A Unlimited Backrooms Game took from the wiki.</p>
+                    <button onclick="rolink()">Playtest</button>
                 </div>
             </li>
         </ol>    
@@ -60,7 +61,7 @@
             <li class="web-old">
                 <div class="web-old-detail">
                     <h2>Catafrancia website (old)</h2>
-                    <p>Personal website that I made in <span class="sololearn" onclick="sololearn()">Sololearn</span> (cringe)</p>
+                    <p>Personal website that I made in <a class="sololearn" href="https://sololearn.com">Sololearn</a> (cringe)</p>
                     <button onclick="oldweb()">Visit</button>
                 </div>
                 <div class="web-old-img">
@@ -74,7 +75,7 @@
     <br />
 
     <footer>
-        <p>&copy; 2023 catamapp | ver. 1.1.1 | compiled 19-5-2023</p>
+        <p>&copy; 2023 catamapp | ver. 1.1.3 | compiled 14-10-2023</p>
     </footer>
   </body>
 </html>
