--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="subdirs/projects/projects.html">Projects</a></li>
             <li><a href="subdirs/contact/contact.html">Contact</a></li>
             <li><a href="subdirs/about/about.html">About</a></li>
+            <li><a href="subdirs/portfolio/portfolio.html">Portfolio</a></li>
         </ul> 
     </nav>
     <br />
@@ -53,7 +54,7 @@
     </div>
 
     <footer>
-      <p>&copy; 2023 catamapp | ver. 1.1.3 | compiled 14-10-2023</p>
+      <p>&copy; 2024 catamapp | ver. 1.1.4 | compiled 28-2-2024</p>
     </footer>    
 </body>
 </html>
