--- a/subdirs/projects/projects.html
+++ b/subdirs/projects/projects.html
@@ -22,6 +22,7 @@
             <li><a href="projects.html">Projects</a></li>
             <li><a href="../contact/contact.html">Contact</a></li>
             <li><a href="../about/about.html" onclick="about()">About</a></li>
+            <li><a href="../portfolio/portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
     <br />
@@ -75,7 +76,7 @@
     <br />
 
     <footer>
-        <p>&copy; 2023 catamapp | ver. 1.1.3 | compiled 14-10-2023</p>
+        <p>&copy; 2024 catamapp | ver. 1.1.4 | compiled 28-2-2024</p>
     </footer>
   </body>
 </html>
