--- a/subdirs/about/about.html
+++ b/subdirs/about/about.html
@@ -22,6 +22,7 @@
             <li><a href="../projects/projects.html">Projects</a></li>
             <li><a href="../contact/contact.html">Contact</a></li>
             <li><a href="about.html">About</a></li>
+            <li><a href="../portfolio/portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
     <br />
@@ -49,7 +50,7 @@
     <br />
     
     <footer>
-      <p>&copy; 2023 catamapp | ver. 1.1.3 | compiled 14-10-2023</p>
+      <p>&copy; 2024 catamapp | ver. 1.1.4 | compiled 28-2-2024</p>
     </footer>  
 </body>
 </html>
