--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
         <p><i>hehe boi i spy on you (jk)</i></p>
       </div>  
       <div id="updlog">
-        <h2>Update Log: (1.1.3)</h2>
-        <p>Optimization of the links (using a instead of span)</p>
-        <p>Discord is back!</p>
+        <h2>Update Log: (1.1.4)</h2>
+        <p>New Portfolio.</p>
       </div>
     </div>
 
